 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)
 
INCOMPATIBLE CHANGES
 
IMPROVEMENTS

PIG-2692: Make the Pig unit faciliities more generalizable and update javadocs (razsapps via daijy)

PIG-4379: Make RoundRobinPartitioner public (daijy)

PIG-4378: Better way to fix tez local mode test hanging (daijy)

PIG-4358: Add test cases for utf8 chinese in Pig (nmaheshwari via daijy)

PIG-4370: HBaseStorage should support delete markers (bridiver via daijy)

PIG-4360: HBaseStorage should support setting the timestamp field (bridiver via daijy)

PIG-4337: Split Types and MultiQuery e2e tests into multiple groups (rohini)

PIG-4066: An optimization for ROLLUP operation in Pig (hxquangnhat via cheolsoo)

PIG-4333: Split BigData tests into multiple groups (rohini)
 
BUG FIXES

PIG-4402: JavaScript UDF example in the doc is broken (cheolsoo)

PIG-4394: Fix Split_9 and Union_5 e2e failures (rohini)

PIG-4391: Fix TestPigStats test failure (rohini)

PIG-4387: Honor yarn settings in tez-site.xml and optimize dag status fetch (rohini)

PIG-4352: Port local mode tests to Tez - TestUnionOnSchema (daijy)

PIG-4359: Port local mode tests to Tez - part4 (daijy)

PIG-4340: PigStorage fails parsing empty map (daijy)

PIG-4366: Port local mode tests to Tez - part5 (daijy)

PIG-4381: PIG grunt shell DEFINE commands fails when it spans multiple lines (daijy)

PIG-4384: TezLauncher thread should be deamon thread (zjffdu via daijy)

PIG-4376: NullPointerException accessing a field of an invalid bag from a nested foreach
 (kspringborn via daijy)

PIG-4355: Piggybank: XPath cant handle namespace in xpath, nor can it return more than one match
 (cavanaug via daijy)

PIG-4371: Duplicate snappy.version in libraries.properties (daijy)
